--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
     "url": "^0.11.3",
     "ws": "^8.16.0"
   },
