--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@fastify/static": "^7.0.1",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.2.2",
     "babel-loader": "^9.1.3",
     "bootstrap": "^5.3.3",
     "fastify": "^4.26.1",
@@ -44,6 +45,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "url": "^0.11.3",
     "ws": "^8.16.0"
   },
